# gjdutils

./: .#pyproject.toml  .gitignore  250215_publishing_to_pypi.md  CODING_SHELL_SCRIPTS.md  LICENSE  README.md  dsci.py  iterfunc.py  misc.py  pyproject.toml  strings.py
.cursor/rules/: README.md  architect-mode.mdc  coding.mdc  scientist-detective-mode.mdc  sounding-board.mdc  surgeon-mode.mdc  testing-python.mdc  writing-planning-docs.mdc
docs/: ARCHITECT_MODE.md  AUDIT_ARCHITECTURE_MODE.md  CODING_SHELL_SCRIPTS.md  DOCUMENTATION_ORGANISATION.md  PORT_DOCS_TO_GJDUTILS.md  README.md  TEMPLATE_FOR_CLAUDE_RULES.md  UPDATE_HOUSEKEEPING_DOCUMENTATION.md  WRITE_EVERGREEN_DOC.md  WRITE_EVERGREEN_DOCS.md  WRITE_PLANNING_DOC.md  coding_principles.md  git_commits.md  update_housekeeping_documentation.md  writing_planning_docs.md
docs/instructions/: AUDIT_ARCHITECTURE_MODE.md  CAPTURE_SOUNDING_BOARD_CONVERSATION.md  DO_GIT_COMMITS.md  DO_PLANNING_DOC.md  GATHER_DIVERSE_INPUTS_AND_CRITIQUES_ON_PLANNING_DOCS_FROM_OTHER_AI_MODELS.md  GATHER_DIVERSE_INPUTS_AND_CRITIQUES_ON_PLANNING_DOCS_FROM_OTHER_AI_MODELS_API_APPROACH.md  GENERATE_MERMAID_DIAGRAM.md  GENERATE_SPIRAL_CURRICULUM_HTML_GUIDE.md  GIT_COMMITS.md  GIT_COMMIT_CHANGES.md  GIT_CREATE_BRANCH.md  GIT_SUBMODULES.md  PORT_DOCS_TO_GJDUTILS.md  RENAME_OR_MOVE.md  RESOLVE_MERGE_CONFLICTS.md  TASKS_SUBAGENTS.md  THIRD_PARTY_LIBRARY_SELECTION.md  UPDATE_CLAUDE_INSTRUCTIONS.md  UPDATE_CRISIS_RESOURCES.md  UPDATE_HOUSEKEEPING_DOCUMENTATION.md  WRITE_DEEP_DIVE_AS_DOC.md  WRITE_EVERGREEN_DOC.md  WRITE_PLANNING_DOC.md
docs/reference/: DOCUMENTATION_ORGANISATION.md  RESEARCH_POTENTIAL_LIBRARY_CHANGES_GOTCHAS.md
docs/reference/libraries/: CHATGPT_IMAGE_GENERATION.md
gdutils/: dicts.py  dsci.py  dt.py  errors.py  files.py  functions.py  google_translate.py  hashing.py  html.py  jsons.py  llm_utils.py  llms.py  llms_obsolete.py  misc.py  num.py  prompt_templates.py  rand.py  requirements.txt  stopwatch.py  strings.py  test_indexing.py  test_rand.py  typ.py  web.py
planning/: 250215_publishing_to_pypi.md
scripts/: check_locally.py  check_pypi_test.py  check_pypi_test.sh  check_pypiprod.py  check_pypitest.py  deploy_all.py  deploy_pypi_test.py  deploy_pypiprod.py  deploy_pypitest.py  export_all.sh  test_locally.sh
src/gdutils/: audios.py  cacheing.py  colab.py  collections.py  dicts.py  dt.py  files.py  html.py  jsons.py  llm_utils.py  llms.py  llms_claude.py  llms_openai.py  misc.py  outloud_text_to_speech.py  pytest_utils.py  sorteddict.py  voice_speechrecognition.py  web.py
src/gdutils/obsolete/: llms_obsolete.py
src/gjdutils/: __init__.py  __version__.py  cacheing.py  cmd.py  collection_utils.py  dsci.py  env.py  files.py  functions.py  html.py  jsons.py  llm_utils.py  llms_claude.py  llms_openai.py  outloud_text_to_speech.py  pypi_build.py  pytest_utils.py  runtime.py  shell.py  strings.py  typ.py  voice_speechrecognition.py  vprint.py
src/gjdutils/cli/: env.py  images.py  main.py
src/gjdutils/cli/pypi/: deploy.py
src/gjdutils/obsolete/: llms_obsolete.py
src/ts/cli/: sequential-datetime-prefix.ts
src/ts/scripts/: count-lines.ts
tests/: fixme_test_num.py  fixme_test_sorteddict.py  test_cli.py  test_env_integration.py  test_gdutils.py  test_indexing.py  test_rand.py  test_vprint.py
