[project]
name = "GDutils"
version = "0.1.0"
authors = [
  { name="Greg Detre", email="greg@gregdetre.com" },
]
description = "A collection of useful utility functions (basics, data science/AI, web development, etc)"
readme = "README.md"
# because I use the | syntax for type Union
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
Homepage = "https://github.com/gregdetre/gdutils"
Repository = "https://github.com/gregdetre/gdutils"
Issues = "https://github.com/gregdetre/gdutils/issues"

license = "MIT"
keywords = ["utilities", "strings", "dates", "data science", "web development", "llm", "ai",]

# [tool.poetry.dev-dependencies]
# pytest = "^5.2"
# black = "^21.12b0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"