[project]
# case-insensitive
name = "GJDutils"
# https://hatch.pypa.io/latest/config/metadata/
dynamic = ["version"]
authors = [
  { name="Greg Detre", email="greg@gregdetre.com" },
]
description = "A collection of useful utility functions (basics, data science/AI, web development, etc)"
readme = "README.md"
# because I use the | syntax for type Union
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
keywords = ["utilities", "strings", "dates", "data science", "web development", "llm", "ai",]

dependencies = [
    "ipython",
    "jinja2",
    "python-dotenv",
    "pydantic",
]

# if you add a new optional dependency group, remember to add it to the 'all' group below
[project.optional-dependencies]
audio_lang = [
    "azure-cognitiveservices-speech",
    "cachetools",
    "google-cloud-texttospeech",
    "google-cloud-translate",
    "elevenlabs",
    # for playing mp3
    "playsound",
    # for playing mp3
    "pygame",
    # for playing mp3
    "python-vlc",
    "SpeechRecognition",
]
dev = [
    "black",
    "pytest",
    "build",
    "twine",
    "wheel",
    "rich",  # for console output formatting
    "typer",  # for CLI tools
]
dt = [
    "humanize",
    "pendulum",
]
html_web = [
    "bs4",
]
llm = [
    "cachetools",
    # "llm", no longer using this
    "openai",
    "pillow", # for images
]

all_no_dev = [
    "gjdutils[audio_lang]",
    "gjdutils[dt]",
    "gjdutils[html_web]",
    "gjdutils[llm]",
]

[project.urls]
Homepage = "https://github.com/gregdetre/gjdutils"
Repository = "https://github.com/gregdetre/gjdutils"
# Issues = "https://github.com/gregdetre/gjdutils/issues"
# Documentation
# Changelog

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "dist/",
    "gjdutils/obsolete/",
    "gjdutils/todo/",
    "tests/fixme_*.py",
]

[tool.hatch.version]
path = "__VERSION__.py"
